Closed Bug 1831457 Opened 2 years ago Closed 2 years ago

call MaybeRestrictSVGContext in VectorImage::GetImageProvider

Categories

(Core :: Graphics: ImageLib, defect)

defect

Tracking

()

RESOLVED FIXED
117 Branch
Tracking Status
firefox-esr102 --- wontfix
firefox-esr115 --- wontfix
firefox112 --- wontfix
firefox113 --- wontfix
firefox114 --- wontfix
firefox115 --- wontfix
firefox116 --- wontfix
firefox117 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

No description provided.

The main part of MaybeRestrictSVGContext blocks context paint where is it not allowed. The css style that enables it is already restricted to chrome, see https://searchfox.org/mozilla-central/source/servo/components/style/properties/longhands/inherited_svg.mako.rs#208 so this isn't a big deal.

We've had a test that context paint isn't enabled in content for a long time

https://searchfox.org/mozilla-central/rev/85b4f7363292b272eb9b606e00de2c37a6be73f0/layout/reftests/svg/as-image/reftest.list#59

So this never regressed. So this just makes it consistent and blocks it further and executes the preserve aspect ratio code.

Assignee: nobody → tnikkel
Status: NEW → ASSIGNED

Set release status flags based on info from the regressing bug 1711061

Pushed by tnikkel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0ff6a63033cb Call MaybeRestrictSVGContext in VectorImage::GetImageProvider. r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 117 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: